--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -122,6 +122,7 @@
 
 .portfolio-title h3 {
   color: white;
+  font-family: 'Druk Wide Bold', sans-serif;
   font-size: clamp(18px, 3vw, 35px);
   letter-spacing: 5px;
   font-weight: 400;
